@@ -22,8 +22,6 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 include(__DIR__ . "/includes/common.php");
-$cms->init_theme($ps->conf['main']['theme'], $ps->conf['theme']);
-$ps->theme_setup($cms->theme);
 $cms->theme->page_title('Defence—PSSS');
 
 // Page cannot be viewed if the site is in maintenance mode.
